# ds-journal

./: .gitignore  CAPACITOR.md  CLAUDE.md  CONTRIBUTING.md  IOS.md  README.md  REFACTOR.md  ROADMAP.md  build_ios.sh  capacitor.config.ts  package-lock.json  package.json  run.sh  test-export.json  vitest.config.ts
.github/workflows/: build.yml
docs/: data-recovery.md  gotchas.md  help_en.md  help_es.md  image-album.md  performance.md  schema-notes.md  security.md  somatic-tracking.md  sync.md  testing.md  ui-behavior.md
ios/App/: Podfile
scripts/: cap-build-run.cjs  cap-fix-spm.cjs  check-i18n.cjs  delete-test-db.cjs  import-map.example.json  import-sp-json-lib.cjs  import-sp-json.cjs  import.cjs  ios-seed.cjs  seed-load-test.cjs  seed-test-db.cjs  sp-anonymize.cjs  sp-export-guide.md  sp-sample-export.json
src/: App.css  App.tsx  config.ts  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.test.conf.json  tauri.test2.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  sync_server.rs  vault.rs
src/__mocks__/: tauri-core.ts  tauri-event.ts  tauri-sql.ts
src/assets/: builtinImages.ts
src/content/: credits.en.ts  doc.ts  help.ts
src/data/: emojis.ts  tarot.ts
src/db/: avatars.ts  backup.ts  channels.ts  emojiOverrides.ts  front-log.ts  images.ts  index.ts  messages.ts  seed.ts  sync-apply.ts  sync-device.ts  sync-events.ts  sync-peers.ts  sync.ts  tags.ts  tracker-presets.ts  trackers.ts
src/hooks/: useAutocomplete.ts  useAvatars.ts  useChannels.ts  (+8 more)
(+111 files in other folders)
