[package]
name = "dsj"
version = "0.9.0"
description = "Dissociative System Journal"
authors = ["Front Switch Studio"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
keyring = "3"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
# Sync server
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
local-ip-address = "0.6"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

